--- a/ReportStudio.Designer/Views/MainWindow.xaml
+++ b/ReportStudio.Designer/Views/MainWindow.xaml
@@ -63,7 +63,7 @@
                 BorderThickness="1"
                 Background="#EDEDED">
 
-            <views:DesignCanvasView/>
+            <views:DesignCanvasView Loaded="DesignCanvasView_Loaded"/>
         </Border>
 
         <!-- ===== プロパティ表示 ===== -->
